--- a/app/src/main/res/layout/asteroid_item.xml
+++ b/app/src/main/res/layout/asteroid_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="asteroid"
-            type="com.udacity.asteroidradar.Asteroid" />
+            type="com.example.asteroidradar.Asteroid" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
